# poetry

demo/: README.md  pyproject.toml
demo/demo/: square.py
my_pkg/: pyproject.toml
my_pkg/my_pkg/: break.py  mdl.py
my_pkg/my_pkg/sub_pkg/: subtract.py
pkg_1/: pyproject.toml
pkg_1/pkg_1/sub1/: abc.py  mod.py
pkg_2/: pyproject.toml
pkg_2/pkg_2/sub2/: what.py
tred/: README.md  pyproject.toml
tred/tests/: test_main.py
tred/tred/: __init__.py  main.py
tred/tred/utils/: singleton.py
