[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["tejasrinivask <tejasrinivas@amagi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
my-pkg = {git = "https://github.com/tejasrinivask/poetry.git", rev = "main", subdirectory = "my_pkg"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
